[workspace]
resolver = "2"
members = [
    # libraries
    "utils",
    "filetypes",

    # binaries
    "example",
]

[workspace.dependencies]
# external
syn = { version = "2", features = ["full", "extra-traits"] }
quote = { version = "1" }
proc-macro2 = { version = "1" }

# local
utils = { path = "./utils", version = "0.1.0" }
filetypes = { path = "./filetypes", version = "0.1.0" }

